# rtos-population-dashboard

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  run.sh  streamlit_app.py
.streamlit/: config.toml
app/: dashboard.py
data/processed/: districts_KEN.geojson  districts_UGA.geojson  indicators_districts.parquet  population_districts.parquet  summary_country.csv
src/rtos/: __init__.py  boundaries.py  catalog.py  config.py  fetch.py  indicators.py  pipeline.py  zonal.py
tests/: test_pipeline.py
