[project]
name = "rtos-population-dashboard"
version = "1.0.0"
description = "Reproducible pipeline + dashboard for WorldPop 2025 age/sex population (Kenya & Uganda)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eugene Mutembei" }]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "streamlit>=1.33",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rtos-pipeline = "rtos.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtos"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
